# nonebot-plugin-nonechat

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  type_check.yml
nonebot_plugin_nonechat/: __init__.py  chat.py  config.py
nonebot_plugin_nonechat/utils/: constants.py  llm.py  parsers.py
